# Data-structures-and-algorithms-TASKS

./: Count pairs of socks  SalseByMatch.java
BinaryTreeMirror/: .gitignore  Allocator.h  CMakeLists.txt  Node.h  SampleTree.h  Solution.h  TestAdditional.cpp  TestAllocator.cpp  TestNode.cpp  TestSolution.cpp
BracketsWithStack/: .gitignore  CMakeLists.txt  README.adoc  application.cpp  solution.cpp  solution.h
Rle_CofingWithLinkedList/: CMakeLists.txt  README.adoc  RleString.cpp  RleString.h  RleStringTest.cpp
template/: CMakeLists.txt  Feedback.me  README.md  mySolution.cpp
template/src/: solution.cpp  solution.h
template/test/: solution_test.cpp
